--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,23 +39,22 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_carousel_slider: ^1.0.8
   flutter_svg: ^1.0.0
-  google_nav_bar: ^5.0.5
-  line_icons: ^2.0.1
+  google_nav_bar: ^5.0.5 
+  line_icons: ^2.0.1 
   buttons_tabbar: ^1.3.2
-  image_picker: ^0.8.4+4
-  intl: ^0.17.0
-  smooth_star_rating: 1.1.1
+  image_picker: ^0.8.4+4 
+  intl: ^0.17.0 
+  smooth_star_rating: 1.1.1  
   url_launcher: ^6.0.18
-  shared_preferences: ^2.0.11
+  shared_preferences: ^2.0.11 
   fluttertoast: ^8.0.8
   cached_network_image: ^3.2.0
-  skeleton_text: ^1.0.0
+  skeleton_text: ^1.0.0  
   date_format: ^2.0.5
   flutter_downloader: ^1.7.3
   permission_handler: ^9.2.0
-  path_provider: ^2.0.9
+  path_provider: ^2.0.9 
   email_validator: ^2.0.1
-  cloud_firestore: ^3.1.11
 
 dev_dependencies:
   flutter_test:
@@ -66,13 +66,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  firebase_database: ^9.0.9
-  firebase_core: ^1.14.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -94,8 +94,9 @@ flutter:
     - assets/images/line2.png
     - assets/images/ktp.png
     - assets/images/gambar.png
-    - assets/svg/
+    - assets/svg/ 
     - assets/icons/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
